--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,30 +3,30 @@ version: 0.2
 phases:
   install:
     commands:
-      - yum update -y && yum install -y docker docker-compose curl
-      - service docker start
-      - usermod -a -G docker ec2-user
+      # Ubuntu package manager (NOT yum)
+      - apt-get update
+      - apt-get install -y docker.io curl docker-compose
+      - systemctl start docker || service docker start
+      - usermod -aG docker $(whoami)
       
-  pre_build:  # BUILD PHASE
+  pre_build:  # BUILD
     commands:
       - echo "Building Apache container..."
       - docker build -t httpd-demo:latest .
-      - echo "Build completed successfully"
       
-  build:       # TEST PHASE
+  build:       # TEST
     commands:
-      - echo "Running integration tests..."
+      - echo "Running tests..."
       - docker run -d -p 8080:80 --name test-app httpd-demo:latest
       - sleep 15
       - curl -f http://localhost:8080 || exit 1
       - curl http://localhost:8080 | grep "Satyajit" || exit 1
-      - echo "✅ All tests PASSED!"
+      - echo "✅ Tests PASSED!"
       
   post_build:
     commands:
       - docker stop test-app || true
       - docker rm test-app || true
-      - echo "Cleanup complete"
 
 artifacts:
   files:
